--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,6 @@ jobs:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
+          python oncoplot_versioneer.py -m "${{ github.event.head_commit.message }}"
           python setup.py sdist bdist_wheel
           twine upload dist/*
