adds step to install from requirements.txt

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
+          pip install -r requirements.txt
           python oncoplot_versioneer.py -m "${{ github.event.head_commit.message }}"
           python setup.py sdist bdist_wheel
           twine upload dist/*
